--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 86400.guru
 email: MarkBruns@MarkBruns.com
 description: Discipline Equals Freedom. Train with intention in each waking moment to improve your discipline optimizing ALL 86400 seconds in each day. Fork this; make it your own.
 twitter_username: MarkBruns
-github_username:  MarkBruns
+github_username:  86400guru
 
 # Build settings
 markdown: kramdown
