--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 86400.guru
 email: MarkBruns@MarkBruns.com
-description: When you don't manage your own time, you become a slave to someone else's agenda. Fork 86400.guru repositories; make them your own.
+description: When you don't manage your own time, you become a slave to someone else's agenda. Fork the 86400.guru repositories; make them your own.
 twitter_username: MarkBruns
 github_username:  86400guru
 
